# sbx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  complexity.html  index.html  project-association-fixes-design.md  project-association-fixes-tasks.md  pyproject.toml  sbx.toml.example  styles.css
docs/: build-local-debian-pi-image.md  current-local-image-usage.md  development.md  environment-forwarding.md  ergonomics.md  fragile-glue.md  git-config-forwarding.md  network-command-roadmap.md  package-auth-implementation-plan.md  package-auth-implementation-tasks.md  per-mount-readonly-writable-draft.md  pi-package-node-version-issue.md  project-organization.md  qemu-default.md  readme-latest-changes-design.md  readme-latest-changes-tasks.md  release-action-design.md  release-action-tasks.md  smolvm-guest-control-plane.md  smolvm-upgrade-design.md  smolvm-upgrade-tasks.md  vm-mount-sync-design.md  vm-mount-sync-tasks.md
issues/: implementation-drifts.md
kernel/: docker.config.fragment
scripts/: build-debian-image.py
specs/: cli-ux-simplification-design.md  cli-ux-simplification-plan.md  cli-ux-simplification-tasks.md  docker-install-design.md  docker-install-plan.md  docker-install-tasks.md  env-var-sync-design.md  env-var-sync-tasks.md  force-start-design.md  force-start-tasks.md  image-build-supply-chain-design.md  image-build-supply-chain-tasks.md  local-port-forwarding-design.md  local-port-forwarding-tasks.md  network-module-split-tasks.md  pi-npm-global-install-design.md  pi-npm-global-install-tasks.md  project-release-design.md  release-action-design.md  release-action-tasks.md  update-dependencies-design.md  update-dependencies-tasks.md  vm-mount-sync-design.md  vm-mount-sync-tasks.md
tests/: test_build_debian_image.py  test_build_debian_image_script.py  test_cli.py  (+8 more)
(+34 files in other folders)
