[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbx"
version = "0.1.0"
description = "Run Pi/Claude/Codex coding agents in disposable SmolVM sandboxes."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "sbx contributors" }]
dependencies = [
  "smolvm>=0.0.19a1",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
]

[project.scripts]
sbx = "sbx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sbx"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=sbx --cov-report=term-missing --cov-fail-under=90"
