[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbx"
version = "0.2.4.dev0"
description = "Run Pi/Claude/Codex coding agents in disposable SmolVM sandboxes."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "sbx contributors" }]
dependencies = [
  "smolvm==0.0.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pre-commit>=4.6.0",
  "ruff>=0.15.21",
]

[project.scripts]
sbx = "sbx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sbx"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=sbx --cov-report=term-missing --cov-fail-under=90"
